# ngopi-programming-language

./: CMakeLists.txt  LICENSE  README.md
docs/: __visual.drawio
src/: main.cpp  main.hpp
src/compiler/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
src/shared/: value.cpp  value.hpp
